--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
- 
+
 <head>
     <title>I Love You</title>
     <style>
@@ -11,13 +11,13 @@
             margin: 0;
             background: #000;
         }
- 
+
         canvas {
             position: absolute;
             width: 100%;
             height: 100%;
         }
- 
+
         canvas {
             /* top: 50%;
             left: 50%; */
@@ -27,27 +27,31 @@
             transform: translate(-50%, -50%);
             animation: heart 1.75s ease infinite
         }
- 
+
         @keyframes heart {
             0% {
                 transform: scale(1.2);
             }
+
             30% {
                 transform: scale(0.9);
-            } 
+            }
+
             80% {
                 transform: scale(1.0);
             }
+
             100% {
                 transform: scale(1.2);
             }
         }
     </style>
 </head>
- 
+
 <body>
     <div>
-        <h1 align="center" style="color: white;position: absolute; top:42%; left: 45%;">I love You!!💕</h1>
+        <h1 align="center" style="color: white;position: absolute;top: calc(50% - 50px);
+        left: calc(50% - 75px);">I love You!!💕</h1>
     </div>
     <canvas id="pinkboard">
         <canvas id="pinkboard">
@@ -66,11 +70,11 @@
                 size: 13, // particle size in pixels
             },
         };
- 
+
         /*
          * RequestAnimationFrame polyfill by Erik Möller
          */
-        (function() {
+        (function () {
             var b = 0;
             var c = ["ms", "moz", "webkit", "o"];
             for (var a = 0; a < c.length && !window.requestAnimationFrame; ++a) {
@@ -78,10 +82,10 @@
                 window.cancelAnimationFrame = window[c[a] + "CancelAnimationFrame"] || window[c[a] + "CancelRequestAnimationFrame"]
             }
             if (!window.requestAnimationFrame) {
-                window.requestAnimationFrame = function(h, e) {
+                window.requestAnimationFrame = function (h, e) {
                     var d = new Date().getTime();
                     var f = Math.max(0, 16 - (d - b));
-                    var g = window.setTimeout(function() {
+                    var g = window.setTimeout(function () {
                         h(d + f)
                     }, f);
                     b = d + f;
@@ -89,24 +93,24 @@
                 }
             }
             if (!window.cancelAnimationFrame) {
-                window.cancelAnimationFrame = function(d) {
+                window.cancelAnimationFrame = function (d) {
                     clearTimeout(d)
                 }
             }
         }());
- 
+
         /*
          * Point class
          */
-        var Point = (function() {
+        var Point = (function () {
             function Point(x, y) {
                 this.x = (typeof x !== 'undefined') ? x : 0;
                 this.y = (typeof y !== 'undefined') ? y : 0;
             }
-            Point.prototype.clone = function() {
+            Point.prototype.clone = function () {
                 return new Point(this.x, this.y);
             };
-            Point.prototype.length = function(length) {
+            Point.prototype.length = function (length) {
                 if (typeof length == 'undefined')
                     return Math.sqrt(this.x * this.x + this.y * this.y);
                 this.normalize();
@@ -114,7 +118,7 @@
                 this.y *= length;
                 return this;
             };
-            Point.prototype.normalize = function() {
+            Point.prototype.normalize = function () {
                 var length = this.length();
                 this.x /= length;
                 this.y /= length;
@@ -122,18 +126,18 @@
             };
             return Point;
         })();
- 
+
         /*
          * Particle class
          */
-        var Particle = (function() {
+        var Particle = (function () {
             function Particle() {
                 this.position = new Point();
                 this.velocity = new Point();
                 this.acceleration = new Point();
                 this.age = 0;
             }
-            Particle.prototype.initialize = function(x, y, dx, dy) {
+            Particle.prototype.initialize = function (x, y, dx, dy) {
                 this.position.x = x;
                 this.position.y = y;
                 this.velocity.x = dx;
@@ -142,14 +146,14 @@
                 this.acceleration.y = dy * settings.particles.effect;
                 this.age = 0;
             };
-            Particle.prototype.update = function(deltaTime) {
+            Particle.prototype.update = function (deltaTime) {
                 this.position.x += this.velocity.x * deltaTime;
                 this.position.y += this.velocity.y * deltaTime;
                 this.velocity.x += this.acceleration.x * deltaTime;
                 this.velocity.y += this.acceleration.y * deltaTime;
                 this.age += deltaTime;
             };
-            Particle.prototype.draw = function(context, image) {
+            Particle.prototype.draw = function (context, image) {
                 function ease(t) {
                     return (--t) * t * t + 1;
                 }
@@ -159,34 +163,34 @@
             };
             return Particle;
         })();
- 
+
         /*
          * ParticlePool class
          */
-        var ParticlePool = (function() {
+        var ParticlePool = (function () {
             var particles,
                 firstActive = 0,
                 firstFree = 0,
                 duration = settings.particles.duration;
- 
+
             function ParticlePool(length) {
                 // create and populate particle pool
                 particles = new Array(length);
                 for (var i = 0; i < particles.length; i++)
                     particles[i] = new Particle();
             }
-            ParticlePool.prototype.add = function(x, y, dx, dy) {
+            ParticlePool.prototype.add = function (x, y, dx, dy) {
                 particles[firstFree].initialize(x, y, dx, dy);
- 
+
                 // handle circular queue
                 firstFree++;
                 if (firstFree == particles.length) firstFree = 0;
                 if (firstActive == firstFree) firstActive++;
                 if (firstActive == particles.length) firstActive = 0;
             };
-            ParticlePool.prototype.update = function(deltaTime) {
+            ParticlePool.prototype.update = function (deltaTime) {
                 var i;
- 
+
                 // update active particles
                 if (firstActive < firstFree) {
                     for (i = firstActive; i < firstFree; i++)
@@ -198,16 +202,16 @@
                     for (i = 0; i < firstFree; i++)
                         particles[i].update(deltaTime);
                 }
- 
+
                 // remove inactive particles
                 while (particles[firstActive].age >= duration && firstActive != firstFree) {
                     firstActive++;
                     if (firstActive == particles.length) firstActive = 0;
                 }
- 
- 
+
+
             };
-            ParticlePool.prototype.draw = function(context, image) {
+            ParticlePool.prototype.draw = function (context, image) {
                 // draw active particles
                 if (firstActive < firstFree) {
                     for (i = firstActive; i < firstFree; i++)
@@ -222,16 +226,16 @@
             };
             return ParticlePool;
         })();
- 
+
         /*
          * Putting it all together
          */
-        (function(canvas) {
+        (function (canvas) {
             var context = canvas.getContext('2d'),
                 particles = new ParticlePool(settings.particles.length),
                 particleRate = settings.particles.length / settings.particles.duration, // particles/sec
                 time;
- 
+
             // get point on heart with -PI <= t <= PI
             function pointOnHeart(t) {
                 return new Point(
@@ -239,9 +243,9 @@
                     110 * Math.cos(t) - 50 * Math.cos(2 * t) - 20 * Math.cos(3 * t) - 10 * Math.cos(4 * t) + 25
                 );
             }
- 
+
             // creating the particle image using a dummy canvas
-            var image = (function() {
+            var image = (function () {
                 var canvas = document.createElement('canvas'),
                     context = canvas.getContext('2d');
                 canvas.width = settings.particles.size;
@@ -272,20 +276,20 @@
                 image.src = canvas.toDataURL();
                 return image;
             })();
- 
+
             // render that thing!
             function render() {
                 // next animation frame
                 requestAnimationFrame(render);
- 
+
                 // update time
                 var newTime = new Date().getTime() / 1000,
                     deltaTime = newTime - (time || newTime);
                 time = newTime;
- 
+
                 // clear canvas
                 context.clearRect(0, 0, canvas.width, canvas.height);
- 
+
                 // create new particles
                 var amount = particleRate * deltaTime;
                 for (var i = 0; i < amount; i++) {
@@ -293,26 +297,26 @@
                     var dir = pos.clone().length(settings.particles.velocity);
                     particles.add(canvas.width / 2 + pos.x, canvas.height / 2 - pos.y, dir.x, -dir.y);
                 }
- 
+
                 // update and draw particles
                 particles.update(deltaTime);
                 particles.draw(context, image);
             }
- 
+
             // handle (re-)sizing of the canvas
             function onResize() {
                 canvas.width = canvas.clientWidth;
                 canvas.height = canvas.clientHeight;
             }
             window.onresize = onResize;
- 
+
             // delay rendering bootstrap
-            setTimeout(function() {
+            setTimeout(function () {
                 onResize();
                 render();
             }, 10);
         })(document.getElementById('pinkboard'));
     </script>
-</bo>
- 
+    </bo>
+
 </HTML>
