--- a/happy-birthday.html
+++ b/happy-birthday.html
@@ -153,7 +153,7 @@
                 <p>Gửi tới Mun thân yêu,</p>
                 <p>Well... anh cũng hong biết nói gì</p>
                 <p>Chỉ mong là những điều tốt đẹp</p>
-                <p>sẽ luôn ở bên em và những người</p>
+                <p>sẽ luôn đến bên em và những người</p>
                 <p>mà em yêu thương!❤️</p>
                 <p>Mong là trong đó có anh, hihi</p>
                 <p>Chúc em tất cả!!</p>
