--- a/close-modal.html
+++ b/close-modal.html
@@ -16,7 +16,9 @@
 <script>
     $(document).ready(function () {
         console.log('close modal');
-        window.parent.postMessage({ data: { close: true } });
+        setTimeout(() => {
+            window.parent.postMessage({ data: { close: true } });
+        }, 5000);
     }); 
 </script>
 
