--- a/happy-birthday-bae.html
+++ b/happy-birthday-bae.html
@@ -736,7 +736,7 @@
     <audio src="music/hbd.mp3" id="my_audio" loop="loop" autoplay="autoplay"></audio>
     <div id="cake">
         <div class="wrapper">
-            <div class="greeting" style=" text-align: right;">
+            <div class="greeting" style=" text-align: center;">
                 Happy Birthday
                 <br>
                 <span id="clickHere" style="font-size: 30px;">CLick here</span>
