--- a/hkfa-payment.html
+++ b/hkfa-payment.html
@@ -94,7 +94,7 @@
         var queryParams;
         var is_connected = false;
         var no_reconnect = 0;
-        var env = 'development'; // production | development
+        var env = 'production'; // production | development
         var env_params = {
             production: {
                 socketUrl: 'https://www.ezactive.com',
