--- a/detect-image/index.html
+++ b/detect-image/index.html
@@ -6,7 +6,7 @@
     <title>OCR Image Analyzer</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- momentjs -->
-    <script src="/moment.js"></script>
+    <script src="moment.js"></script>
   </head>
   <body>
     <div class="main-container">
