--- a/detect-image/index.html
+++ b/detect-image/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OCR Image Analyzer</title>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="fonts/fas/css/all.css" />
+    <!-- Bootstrap5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <!-- momentjs -->
     <script src="moment.js"></script>
+    <!-- Bootstrap5 -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="main-container">
