--- a/detect-image/index.html
+++ b/detect-image/index.html
@@ -7,7 +7,10 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="fonts/fas/css/all.css" />
     <!-- Bootstrap5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <!-- momentjs -->
     <script src="moment.js"></script>
@@ -19,24 +22,43 @@
     <div class="main-container">
       <div class="upload-container" id="dropZone">
         <h2>Kéo thả hoặc chọn ảnh để phân tích</h2>
-        <input type="file" id="fileInput" multiple accept="image/*" style="display: none" />
+        <input
+          type="file"
+          id="fileInput"
+          multiple
+          accept="image/*"
+          style="display: none"
+        />
         <div class="upload-actions">
-          <button onclick="document.getElementById('fileInput').click()" class="upload-button">Chọn ảnh</button>
-          <button id="clearAllButton" class="upload-button warning" disabled>Xóa tất cả</button>
+          <button
+            onclick="document.getElementById('fileInput').click()"
+            class="upload-button"
+          >
+            Chọn ảnh
+          </button>
+          <button id="clearAllButton" class="upload-button warning" disabled>
+            Xóa tất cả
+          </button>
         </div>
         <div class="file-list" id="fileList"></div>
 
         <div class="action-buttons">
-          <button id="analyzeButton" class="upload-button" disabled>Phân tích ảnh</button>
+          <button id="analyzeButton" class="upload-button" disabled>
+            Phân tích ảnh
+          </button>
 
-          <button id="openReviewDataButton" class="upload-button secondary">Xem dữ liệu phân tích</button>
+          <button id="openReviewDataButton" class="upload-button secondary">
+            Xem dữ liệu phân tích
+          </button>
         </div>
 
         <div class="user-info">
           <select id="userName" class="name-input">
             <option value="">-- Chọn tên của bạn --</option>
           </select>
-          <button id="createSalaryButton" class="upload-button" disabled>Tạo bảng lương</button>
+          <button id="createSalaryButton" class="upload-button" disabled>
+            Tạo bảng lương
+          </button>
         </div>
       </div>
     </div>
@@ -58,6 +80,7 @@
         </div>
       </div>
     </div>
+    <script src="analyze_ocr.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
